Revert "Update TLS ciphers and protocols for JDK 11 (#41385)"
This reverts commit 315c971044a399b1ea4276d200db577c6189988d due to
CI failures related to this change. Some of the failures are due to JDK
bugs related to TLSv1.3 such as JDK-8213202 and an endless loop in the
HttpsServer when the client closes in a certain manner.